tests/rustdoc-ui/doctest/unstable-opts-147276.normal.stderr
error[E0658]: `#[used(linker)]` is currently unstable
  --> $DIR/unstable-opts-147276.rs:15:1
   |
LL | #[used(linker)]
   | ^^^^^^^^^^^^^^^
   |
   = note: see issue #93798 <https://github.com/rust-lang/rust/issues/93798> for more information
   = help: add `#![feature(used_with_arg)]` to the crate attributes to enable
   = note: this compiler was built on YYYY-MM-DD; consider upgrading it if it is out of date

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0658`.
